--- a/.github/workflows/main_imc-website.yml
+++ b/.github/workflows/main_imc-website.yml
@@ -40,7 +40,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -55,11 +55,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6CE1DE0269274E25AED39B93BEF00E97 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_42ACD71C664C488998AA6C3D19D54DE0 }}
 
-      - name: 'Deploy to Azure Web App'
+      # Deploy using ZIP Deploy method
+      - name: 'Deploy to Azure WebApp using ZIP Deploy'
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
           app-name: 'imc-website'
-          slot-name: 'Production'
-          package: .
-          
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: './build'
