--- a/.github/workflows/main_imc-website.yml
+++ b/.github/workflows/main_imc-website.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - imc-website
+name: Build and deploy Node.js app to GitHub (No Azure)
 
 on:
   push:
@@ -26,18 +23,3 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: .
-
-
-      # Deploy using ZIP Deploy method
-      - name: 'Deploy to Azure WebApp using ZIP Deploy'
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'imc-website'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './build'
